<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Uitor Sample</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipicing elit.</string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor</string>
    <string name="lorem_ipsum_long">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="lorem_ipsum_huge">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like). There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don\'t look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn\'t anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is therefore always free from repetition.</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="form_username">Username</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sub_header">SubHeader</string>
    <string name="nav_sub_item_1">SubItem1</string>
    <string name="nav_sub_item_2">SubItem2</string>
    <string name="button_label_disabled">button_label_disabled</string>
    <string name="unelevated_button_label_enabled">unelevated_button_label_enabled</string>
    <string name="demo_card_text">Demo Card Text</string>
    <string name="play">Play</string>
</resources>
